--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
 
 		<script src="jquery.js"></script>
 		<script src="bootstrap.min.js"></script>
-	
+		<script src="react-bootstrap-bower-master/react-bootstrap.min.js"></script>
         <script src="bundle.js"></script>
 
 	</body>
